hphp/hack/test/typecheck/foreach_ref3.php.exp
File "foreach_ref3.php", line 5, characters 20-34:
Cannot take references to array elements. (Typing[4225])
